--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -9,13 +9,16 @@
   <div class="collapse navbar-collapse" [collapse]="isCollapsed">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive='active'>
-        <a class="nav-link" routerLink='/sale'>Sale</a>
+        <a class="nav-link" routerLink='/sale'>{{loc.translate('Sale')}}</a>
       </li>
       <li class="nav-item" routerLinkActive='active'>
-        <a class="nav-link" routerLink='/shop'>Shop</a>
+        <a class="nav-link" routerLink='/shop'>{{loc.translate('Shop')}}</a>
       </li>
       <li class="nav-item" routerLinkActive='active'>
-        <a class="nav-link" routerLink='/about'>About</a>
+        <a class="nav-link" routerLink='/about'>{{loc.translate('About')}}</a>
+      </li>
+      <li *appHasRole='["Admin", "Moderator"]' class="nav-item" routerLinkActive='active'>
+        <a class="nav-link" routerLink='/product-administration'>{{loc.translate('Product administration')}}</a>
       </li>
       <!-- <li class="nav-item dropdown" dropdown *ngFor="let productGroup of productGroups">
         <a class="nav-link dropdown-toggle" dropdownToggle>
