--- a/client/src/app/product/product-table/product-table.component.html
+++ b/client/src/app/product/product-table/product-table.component.html
@@ -8,9 +8,9 @@
 <div class="row" *ngIf="products?.length > 0">
     <table class="table table-hover" style="cursor: pointer">
         <tr>
-            <th style="width: 40%">Name</th>
-            <th style="width: 20%">Price</th>
-            <th style="width: 20%">Quantity</th>
+            <th style="width: 40%"><h5>Name</h5></th>
+            <th style="width: 20%"><h5>Price</h5></th>
+            <th style="width: 20%"><h5>Quantity</h5></th>
             <th style="width: 20%"></th>
         </tr>
         <tr [hidden]="loading" *ngFor="let product of products" >
@@ -18,7 +18,8 @@
             <td>{{product.price}}</td>
             <td>{{product.quantity}}</td>
             <td>
-                <!-- <button (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)" class='btn btn-danger'>Delete</button> -->
+                <button (click)="$event.stopPropagation()" (click)="openEditProductModal(product)" class='btn btn-outline-success'>Edit</button>
+                <button (click)="$event.stopPropagation()" (click)="deleteProduct(product.id)" class='btn btn-danger'>Delete</button>
             </td>
         </tr>
     </table>
