Update angular version in package json Switching to material

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -3,3 +3,13 @@
   .cdk-overlay-container {
       z-index: 9999;
   }
+  html,
+  body {
+      height: 100%;
+      margin: 0;
+  }
+  
+  body {
+      margin: 0;
+      font-family: Roboto, "Helvetica Neue", sans-serif;
+  }
