--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -39,8 +39,8 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
-    <a *ngIf="(accountService.currentUser$ | async) === null && !loginToggle" class="ml-2" style="cursor: pointer;" (click)="loginToggle=!loginToggle">Login</a>
-    <form *ngIf="(accountService.currentUser$ | async) === null && loginToggle" #loginForm="ngForm" class="form-inline mt-2 mt-md-0"
+    <a *ngIf="!(isAuth$ | async) && !loginToggle" class="ml-2" style="cursor: pointer;" routerLink="/login">Login</a>
+    <form *ngIf="(isAuth$ | async) && loginToggle" #loginForm="ngForm" class="form-inline mt-2 mt-md-0"
       (ngSubmit)="login()" autocomplete="off">
       <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text"
         placeholder="Username">
@@ -48,9 +48,9 @@
         placeholder="Password">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
     </form>
-    <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+    <div class="dropdown" *ngIf="(isAuth$ | async)" dropdown>
       <!-- <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}"> -->
-      <a class="dropdown-toggle ml-2" dropdownToggle>Welcome {{user.username | titlecase}}</a>
+      <a class="dropdown-toggle ml-2" dropdownToggle>Welcome {{(user$ | async)?.username | titlecase}}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
           <a routerLink='/member/edit' class="dropdown-item">Edit Profile</a>
           <div class="dropdown-divider"></div>
