--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -13,3 +13,17 @@
       margin: 0;
       font-family: Roboto, "Helvetica Neue", sans-serif;
   }
+
+  snack-bar-container.success {
+    background-color:green;
+  }
+  
+  snack-bar-container.error {
+    background-color:red;
+  }
+  
+  snack-bar-container.notification {
+    font-size: 18px !important;
+    color:white;
+    font-weight:bold;
+  }
